--- a/src/componentes/Produtos/Produtos.css
+++ b/src/componentes/Produtos/Produtos.css
@@ -1,14 +1,3 @@
-.content {
-    grid-area: main;
-    
-}
-
-.title {
-    font-weight: 500;
-    margin: 0 5rem 2rem;
-    font-weight: 500;
-}
-
 .produtos {
     display: flex;
     flex-direction: row;
@@ -32,4 +21,8 @@
 
 .produto-price {
     font-size: 1.5rem;
+}
+
+.produto-parcela {
+    font-weight: 300;
 }
